[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bubble.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bubbles.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -96, 232, 0, 0, 0, 0, -96, 552, 0, 0, 0, 0, 1120, 552, 0, 0, 0, 0, 1120, 232 )
}

[node name="Bubbles" type="Node"]
script = ExtResource( 2 )
Bubble = ExtResource( 1 )

[node name="BubbleTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CleanupTimer" type="Timer" parent="."]

[node name="BubblePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BubbleSpawnLocation" type="PathFollow2D" parent="BubblePath"]
position = Vector2( -96, 232 )
rotation = 1.5708

[connection signal="timeout" from="BubbleTimer" to="." method="_on_BubbleTimer_timeout"]
[connection signal="timeout" from="CleanupTimer" to="." method="_on_CleanupTimer_timeout"]
